// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with logo 1`] = `
<DocumentFragment>
  <a
    class="CompanyCard card"
    href="/companies/rithm"
  >
    <div>
      <h5
        class="card-title"
      >
        Rithm School
      </h5>
      <p>
        <small>
          Become an exceptional developer in 16 weeks.
        </small>
      </p>
    </div>
  </a>
</DocumentFragment>
`;

exports[`matches snapshot without logo 1`] = `
<DocumentFragment>
  <a
    class="CompanyCard card"
    href="/companies/algo"
  >
    <div>
      <h5
        class="card-title"
      >
        Algo School
      </h5>
      <p>
        <small>
          Become a mediocre developer in 160 weeks.
        </small>
      </p>
    </div>
  </a>
</DocumentFragment>
`;
